aws/cdk.out/RssFeedAppStack.template.json
{
 "Resources": {
  "RssFeedVPCE97858D3": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "RssFeedAppStack/RssFeedVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/Resource"
   }
  },
  "RssFeedVPCPublicSubnet1SubnetDD08EED3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "RssFeedAppStack/RssFeedVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RssFeedVPCE97858D3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PublicSubnet1/Subnet"
   }
  },
  "RssFeedVPCPublicSubnet1RouteTableED6D0696": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RssFeedAppStack/RssFeedVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RssFeedVPCE97858D3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PublicSubnet1/RouteTable"
   }
  },
  "RssFeedVPCPublicSubnet1RouteTableAssociation836C21B9": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RssFeedVPCPublicSubnet1RouteTableED6D0696"
    },
    "SubnetId": {
     "Ref": "RssFeedVPCPublicSubnet1SubnetDD08EED3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PublicSubnet1/RouteTableAssociation"
   }
  },
  "RssFeedVPCPublicSubnet1DefaultRouteF200E098": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "RssFeedVPCIGW754497EE"
    },
    "RouteTableId": {
     "Ref": "RssFeedVPCPublicSubnet1RouteTableED6D0696"
    }
   },
   "DependsOn": [
    "RssFeedVPCVPCGW768A98D8"
   ],
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PublicSubnet1/DefaultRoute"
   }
  },
  "RssFeedVPCPublicSubnet1EIP175B0C3D": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "RssFeedAppStack/RssFeedVPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PublicSubnet1/EIP"
   }
  },
  "RssFeedVPCPublicSubnet1NATGatewayA2CF1A73": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "RssFeedVPCPublicSubnet1EIP175B0C3D",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "RssFeedVPCPublicSubnet1SubnetDD08EED3"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "RssFeedAppStack/RssFeedVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "RssFeedVPCPublicSubnet1DefaultRouteF200E098",
    "RssFeedVPCPublicSubnet1RouteTableAssociation836C21B9"
   ],
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PublicSubnet1/NATGateway"
   }
  },
  "RssFeedVPCPublicSubnet2SubnetC04AD72E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "RssFeedAppStack/RssFeedVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RssFeedVPCE97858D3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PublicSubnet2/Subnet"
   }
  },
  "RssFeedVPCPublicSubnet2RouteTable86621A52": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RssFeedAppStack/RssFeedVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RssFeedVPCE97858D3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PublicSubnet2/RouteTable"
   }
  },
  "RssFeedVPCPublicSubnet2RouteTableAssociationBEBBD511": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RssFeedVPCPublicSubnet2RouteTable86621A52"
    },
    "SubnetId": {
     "Ref": "RssFeedVPCPublicSubnet2SubnetC04AD72E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PublicSubnet2/RouteTableAssociation"
   }
  },
  "RssFeedVPCPublicSubnet2DefaultRoute747DA275": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "RssFeedVPCIGW754497EE"
    },
    "RouteTableId": {
     "Ref": "RssFeedVPCPublicSubnet2RouteTable86621A52"
    }
   },
   "DependsOn": [
    "RssFeedVPCVPCGW768A98D8"
   ],
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PublicSubnet2/DefaultRoute"
   }
  },
  "RssFeedVPCPrivateSubnet1SubnetE038C3CE": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "RssFeedAppStack/RssFeedVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RssFeedVPCE97858D3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PrivateSubnet1/Subnet"
   }
  },
  "RssFeedVPCPrivateSubnet1RouteTable47B51338": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RssFeedAppStack/RssFeedVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RssFeedVPCE97858D3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PrivateSubnet1/RouteTable"
   }
  },
  "RssFeedVPCPrivateSubnet1RouteTableAssociation9FD853CB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RssFeedVPCPrivateSubnet1RouteTable47B51338"
    },
    "SubnetId": {
     "Ref": "RssFeedVPCPrivateSubnet1SubnetE038C3CE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "RssFeedVPCPrivateSubnet1DefaultRouteC26860B3": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "RssFeedVPCPublicSubnet1NATGatewayA2CF1A73"
    },
    "RouteTableId": {
     "Ref": "RssFeedVPCPrivateSubnet1RouteTable47B51338"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PrivateSubnet1/DefaultRoute"
   }
  },
  "RssFeedVPCPrivateSubnet2Subnet128DAD5C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "RssFeedAppStack/RssFeedVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RssFeedVPCE97858D3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PrivateSubnet2/Subnet"
   }
  },
  "RssFeedVPCPrivateSubnet2RouteTable7E3E0A80": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RssFeedAppStack/RssFeedVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RssFeedVPCE97858D3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PrivateSubnet2/RouteTable"
   }
  },
  "RssFeedVPCPrivateSubnet2RouteTableAssociation571E5FC6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RssFeedVPCPrivateSubnet2RouteTable7E3E0A80"
    },
    "SubnetId": {
     "Ref": "RssFeedVPCPrivateSubnet2Subnet128DAD5C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "RssFeedVPCPrivateSubnet2DefaultRoute3F866085": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "RssFeedVPCPublicSubnet1NATGatewayA2CF1A73"
    },
    "RouteTableId": {
     "Ref": "RssFeedVPCPrivateSubnet2RouteTable7E3E0A80"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/PrivateSubnet2/DefaultRoute"
   }
  },
  "RssFeedVPCIGW754497EE": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RssFeedAppStack/RssFeedVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/IGW"
   }
  },
  "RssFeedVPCVPCGW768A98D8": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "RssFeedVPCIGW754497EE"
    },
    "VpcId": {
     "Ref": "RssFeedVPCE97858D3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedVPC/VPCGW"
   }
  },
  "RssFeedSecurityGroupD32A537E": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for RSS Feed App",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow SSH access",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTP access",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow Frontend access",
      "FromPort": 3000,
      "IpProtocol": "tcp",
      "ToPort": 3000
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow Backend access",
      "FromPort": 8000,
      "IpProtocol": "tcp",
      "ToPort": 8000
     }
    ],
    "VpcId": {
     "Ref": "RssFeedVPCE97858D3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedSecurityGroup/Resource"
   }
  },
  "RssFeedInstanceInstanceRole5B0BCF38": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "RssFeedAppStack/RssFeedInstance"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedInstance/InstanceRole/Resource"
   }
  },
  "RssFeedInstanceInstanceProfile2E6D9BDC": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "RssFeedInstanceInstanceRole5B0BCF38"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedInstance/InstanceProfile"
   }
  },
  "RssFeedInstance2B6E3B25": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "IamInstanceProfile": {
     "Ref": "RssFeedInstanceInstanceProfile2E6D9BDC"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t2.medium",
    "KeyName": "rss-feed-app-02",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "RssFeedSecurityGroupD32A537E",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "RssFeedVPCPublicSubnet1SubnetDD08EED3"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "RssFeedAppStack/RssFeedInstance"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\nyum update -y\nyum install -y docker git\nsystemctl start docker\nsystemctl enable docker\nusermod -a -G docker ec2-user\ncurl -sL https://rpm.nodesource.com/setup_18.x | bash -\nyum install -y nodejs\nmkdir -p /usr/local/lib/docker/cli-plugins/\ncurl -SL https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-linux-x86_64 -o /usr/local/lib/docker/cli-plugins/docker-compose\nchmod +x /usr/local/lib/docker/cli-plugins/docker-compose\nsudo -i -u  [...]
    }
   },
   "DependsOn": [
    "RssFeedInstanceInstanceRole5B0BCF38"
   ],
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedInstance/Resource"
   }
  },
  "RssFeedALB5A16BFB4": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "RssFeedSecurityGroupD32A537E",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "RssFeedVPCPublicSubnet1SubnetDD08EED3"
     },
     {
      "Ref": "RssFeedVPCPublicSubnet2SubnetC04AD72E"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "RssFeedVPCPublicSubnet1DefaultRouteF200E098",
    "RssFeedVPCPublicSubnet1RouteTableAssociation836C21B9",
    "RssFeedVPCPublicSubnet2DefaultRoute747DA275",
    "RssFeedVPCPublicSubnet2RouteTableAssociationBEBBD511"
   ],
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedALB/Resource"
   }
  },
  "RssFeedALBListener52D240AA": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "RssFeedALBListenerFrontendTargetGroup41172234"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "RssFeedALB5A16BFB4"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedALB/Listener/Resource"
   }
  },
  "RssFeedALBListenerFrontendTargetGroup41172234": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckPath": "/",
    "Matcher": {
     "HttpCode": "200"
    },
    "Port": 3000,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "instance",
    "Targets": [
     {
      "Id": {
       "Ref": "RssFeedInstance2B6E3B25"
      }
     }
    ],
    "VpcId": {
     "Ref": "RssFeedVPCE97858D3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedALB/Listener/FrontendTargetGroup/Resource"
   }
  },
  "RssFeedALBListenerBackendTargetGroup254CE19D": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckPath": "/docs",
    "Matcher": {
     "HttpCode": "200"
    },
    "Port": 8000,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "instance",
    "Targets": [
     {
      "Id": {
       "Ref": "RssFeedInstance2B6E3B25"
      }
     }
    ],
    "VpcId": {
     "Ref": "RssFeedVPCE97858D3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedALB/Listener/BackendTargetGroup/Resource"
   }
  },
  "RssFeedALBListenerBackendTargetRuleA04AB179": {
   "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
   "Properties": {
    "Actions": [
     {
      "TargetGroupArn": {
       "Ref": "RssFeedALBListenerBackendTargetGroup254CE19D"
      },
      "Type": "forward"
     }
    ],
    "Conditions": [
     {
      "Field": "path-pattern",
      "PathPatternConfig": {
       "Values": [
        "/api/*"
       ]
      }
     }
    ],
    "ListenerArn": {
     "Ref": "RssFeedALBListener52D240AA"
    },
    "Priority": 1
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/RssFeedALB/Listener/BackendTargetRule/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/21R0WoCMRD8Ft9jqtfSdytFDkobTvG17MVVV3PJkWwUOe7fyxn1TujTzswOk1mSyWn2JicjOIex3hzHhkrZLBn0UcA5/DaoM9msay3mW7tWc6FiaUgvY2mRO61HhYuMKygN9nqvzUJwmoDJ2Ye5A5+56sY38AIYz3ARytMJGPvg3DJ6iw9DanJjM2bQ+wotiyXq6IkvC+9ife3wJOQ2MFiNKTLhVhBUsilcKn2f97XybksGW4EGApM2DjYlGLCa7O6UyWZW14b09aovB5uP6w59l/HEhz4KjPbmuePBfgV+h/y4YUj/SSliajzkbSsKDC76dKsCDxVyevEnch3Td90srVAX3jv78iqnE/k+OgSisY+WqUJZpPkH1X2bqyUCAAA="
   },
   "Metadata": {
    "aws:cdk:path": "RssFeedAppStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Outputs": {
  "InstancePublicIP": {
   "Description": "Public IP address of the EC2 instance",
   "Value": {
    "Fn::GetAtt": [
     "RssFeedInstance2B6E3B25",
     "PublicIp"
    ]
   }
  },
  "LoadBalancerDNS": {
   "Description": "DNS name of the Load Balancer",
   "Value": {
    "Fn::GetAtt": [
     "RssFeedALB5A16BFB4",
     "DNSName"
    ]
   }
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
